# kmonitortest

kmonitortest/: .cvsignore  AUTHORS  Makefile.am  configure.in.in  kmonitortest.lsm
kmonitortest/admin/: mkinstalldirs
kmonitortest/doc/en/: Makefile.am  index.docbook
kmonitortest/kmonitortest/: Makefile.am  kmonitortest.cpp  kmonitortest.desktop  kmonitortest.h
kmonitortest/kmonitortest/pics/: Makefile.am
kmonitortest/po/: kmonitortest.pot
